--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid x:Name="RootGrid"
           Background="{StaticResource Brush-Grey-05}" 
-          Padding="48">
+          Margin="48">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Full">
@@ -33,7 +33,7 @@
         <Grid.RowDefinitions>
             <RowDefinition MinHeight="100"></RowDefinition>
             <RowDefinition Height="11"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="200"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
