--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid x:Name="RootGrid"
           Background="{StaticResource Brush-Grey-05}" 
-          Margin="48">
+          Padding="48">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Full">
