--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeView/BladePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeView/BladePage.xaml
@@ -32,10 +32,10 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        <controls:BladeView Padding="0"
+        <controls:BladeView x:Name="BladeView"
+                            Padding="0"
                             HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            FullScreenBlades="True">
+                            VerticalAlignment="Stretch">
             <controls:BladeItem x:Name="FirstBlade"
                                 Title="Test"
                                 IsOpen="True"
@@ -45,6 +45,12 @@
                                 BorderBrush="{StaticResource Brush-Grey-04}">
                 <StackPanel Margin="24">
                     <TextBlock TextWrapping="WrapWholeWords" Text="This first blade has a hidden TitleBar, so you can't close it." />
+                    
+                    <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="You can automatically set blade dimensions to be fullscreen. Toggle the button below to enable/disable fullscreen blades" />
+                    <ToggleButton Margin="0, 24, 0, 0"
+                                  IsChecked="{Binding FullScreenBlades, Mode=TwoWay, ElementName=BladeView}"
+                                  Content="Toggle fullscreen blades" />
+                    
                     <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened." />
                     <ToggleButton Margin="0, 24, 0, 0"
                                   IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=SecondBlade}"
@@ -55,6 +61,7 @@
                     <ToggleButton Margin="0, 24, 0, 0"
                                   IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=FourthBlade}"
                                   Content="Custom close button" />
+                    
                 </StackPanel>
             </controls:BladeItem>
 
