--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ScrollHeader/ScrollHeaderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/ScrollHeader/ScrollHeaderPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.QuickReturnHeaderPage"
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.ScrollHeaderPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -10,30 +10,30 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListView Name="listView" ItemsSource="{x:Bind _items, Mode=OneWay}">
             <ListView.Header>
-                <controls:QuickReturnHeader QuickReturn="{Binding QuickReturn.Value}"
-                                            Sticky="{Binding Sticky.Value}"
-                                            Fade="{Binding Fade.Value}"
-                                            TargetListViewBase="{x:Bind listView}">
+                <controls:ScrollHeader Fade="{Binding Fade.Value}"
+                                       QuickReturn="{Binding QuickReturn.Value}"
+                                       Sticky="{Binding Sticky.Value}"
+                                       TargetListViewBase="{x:Bind listView}">
                     <Grid x:Name="MyHeaderGrid"
-                      MinHeight="250"
-                      Background="{StaticResource Brush-Blue-01}">
+                          MinHeight="250"
+                          Background="{StaticResource Brush-Blue-01}">
                         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                             <TextBlock Margin="12"
-                                   FontSize="48"
-                                   FontWeight="Bold"
-                                   Foreground="{StaticResource Brush-White}"
-                                   Text="Quick Return Header"
-                                   TextAlignment="Center"
-                                   TextWrapping="WrapWholeWords" />
+                                       FontSize="48"
+                                       FontWeight="Bold"
+                                       Foreground="{StaticResource Brush-White}"
+                                       Text="Scroll Header"
+                                       TextAlignment="Center"
+                                       TextWrapping="WrapWholeWords" />
                             <TextBlock Margin="12,0,12,12"
-                                   VerticalAlignment="Center"
-                                   Foreground="{StaticResource Brush-White}"
-                                   Text="The quick return header hides when the ListView is scrolled down and reappears immediately as soon as the ListView is scrolled up again."
-                                   TextAlignment="Center"
-                                   TextWrapping="WrapWholeWords" />
+                                       VerticalAlignment="Center"
+                                       Foreground="{StaticResource Brush-White}"
+                                       Text="The scroll header supports quick return, sticky and fade behavior. If fade is enabled the header fades out while scrolling down. If quick return is enabled the header hides when the ListView is scrolled down and reappears immediately as soon as the ListView is scrolled up again. If sticky is enabled the header is displayed regardless of scrolling."
+                                       TextAlignment="Center"
+                                       TextWrapping="WrapWholeWords" />
                         </StackPanel>
                     </Grid>
-                </controls:QuickReturnHeader>
+                </controls:ScrollHeader>
             </ListView.Header>
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="models:Item">
