--- a/Microsoft.Toolkit.Uwp.UI.Controls/ScrollHeader/ScrollHeader.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/ScrollHeader/ScrollHeader.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
-    <Style TargetType="controls:QuickReturnHeader">
+    <Style TargetType="controls:ScrollHeader">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="controls:QuickReturnHeader">
+                <ControlTemplate TargetType="controls:ScrollHeader">
                     <ScrollViewer>
                         <ContentPresenter />
                     </ScrollViewer>
